<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_ros2</name>
  <version>0.0.0</version>
  <description>Metapackage for OnRobot gripper packages</description>

  <maintainer email="jbeck@spaceroboticsworkers.com">Jacob Beck</maintainer>
  <license>MIT</license>
  <author>Jacob Beck</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>onrobot_description</exec_depend>
  <exec_depend>onrobot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
